# eglot-auto-import-code-action-broken

./: .envrc  .gitattributes  .gitignore  Dockerfile  README.md  codeAction2.json  docker-run.sh  flake.nix  init.el  initialize.json  inject-cookie.fish  lsp.input  packages.el  readme.org  release.nix  scratch.cabal  scratch.nix  shell.nix
app/: Scratch.hs
