cabal-version:      2.4
name:               scratch
version:            1.0.3-wip
synopsis:           An implementation of the card game Hearts
license:            GPL-3.0-or-later
author:             Emily Bourke
copyright:          Emily Bourke
maintainer:         undergroundquizscene@protonmail.com

extra-source-files:

data-files:

executable scratch
  main-is: Scratch.hs
  other-modules:
  hs-source-dirs:
      app
  ghc-options: -Wall -Werror
               -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base,
  default-language: Haskell2010
